# NRF52840_RAB7_SensorFusion

./: CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay  prj.conf
src/: bmi323.c  bmi323.h  bmp585.c  bmp585.h  dps368.c  dps368.h  main.c  sgp41.c  sgp41.h  sht41.c  sht41.h
src/bme690/: bme69x.c  bme_driver.c  bme_driver.h
src/bmp585/: bmp_driver.c  bmp_driver.h
